---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "({ int x[3]={1,2,3}; x[0]; }) => 1\n({ int x[3]={1,2,3}; x[1]; }) => 2\n({ int x[3]={1,2,3}; x[2]; }) => 3\n({ int x[3]={1,2,3}; x[2]; }) => 3\n({ int x[2][3]={{1,2,3},{4,5,6}}; x[0][1]; }) => 2\n({ int x[2][3]={{1,2,3},{4,5,6}}; x[1][0]; }) => 4\n({ int x[2][3]={{1,2,3},{4,5,6}}; x[1][2]; }) => 6\n({ int x[3]={}; x[0]; }) => 0\n({ int x[3]={}; x[1]; }) => 0\n({ int x[3]={}; x[2]; }) => 0\n({ int x[2][3]={{1,2}}; x[0][1]; }) => 2\n({ int x[2][3]={{1,2}}; x[1][0]; }) => 0\n({ int x[2][3]={{1,2}}; x[1][2]; }) => 0\n({ int x[2]={1,2,3}; x[0]; }) => 1\n({ int x[2]={1,2,3}; x[1]; }) => 2\n({ char x[4]=\"abc\"; x[0]; }) => 97\n({ char x[4]=\"abc\"; x[2]; }) => 99\n({ char x[4]=\"abc\"; x[3]; }) => 0\n({ char x[2][4]={\"abc\",\"def\"}; x[0][0]; }) => 97\n({ char x[2][4]={\"abc\",\"def\"}; x[0][3]; }) => 0\n({ char x[2][4]={\"abc\",\"def\"}; x[1][0]; }) => 100\n({ char x[2][4]={\"abc\",\"def\"}; x[1][2]; }) => 102\n({ int x[]={1,2,3,4}; x[3]; }) => 4\n({ int x[]={1,2,3,4}; sizeof(x); }) => 16\n({ char x[]=\"foo\"; sizeof(x); }) => 4\n({ typedef char T[]; T x=\"foo\"; T y=\"x\"; sizeof(x); }) => 4\n({ typedef char T[]; T x=\"foo\"; T y=\"x\"; sizeof(y); }) => 2\n({ typedef char T[]; T x=\"x\"; T y=\"foo\"; sizeof(x); }) => 2\n({ typedef char T[]; T x=\"x\"; T y=\"foo\"; sizeof(y); }) => 4\n({ struct {int a; int b; int c;} x={1,2,3}; x.a; }) => 1\n({ struct {int a; int b; int c;} x={1,2,3}; x.b; }) => 2\n({ struct {int a; int b; int c;} x={1,2,3}; x.c; }) => 3\n({ struct {int a; int b; int c;} x={1}; x.a; }) => 1\n({ struct {int a; int b; int c;} x={1}; x.b; }) => 0\n({ struct {int a; int b; int c;} x={1}; x.c; }) => 0\n({ struct {int a; int b;} x[2]={{1,2},{3,4}}; x[0].a; }) => 1\n({ struct {int a; int b;} x[2]={{1,2},{3,4}}; x[0].b; }) => 2\n({ struct {int a; int b;} x[2]={{1,2},{3,4}}; x[1].a; }) => 3\n({ struct {int a; int b;} x[2]={{1,2},{3,4}}; x[1].b; }) => 4\n({ struct {int a; int b;} x[2]={{1,2}}; x[1].b; }) => 0\n({ struct {int a; int b;} x={}; x.a; }) => 0\n({ struct {int a; int b;} x={}; x.b; }) => 0\n({ typedef struct {int a,b,c,d,e,f;} T; T x={1,2,3,4,5,6}; T y; y=x; y.e; }) => 5\n({ typedef struct {int a,b;} T; T x={1,2}; T y, z; z=y=x; z.b; }) => 2\n({ typedef struct {int a,b;} T; T x={1,2}; T y=x; y.a; }) => 1\n({ union { int a; char b[4]; } x={0x01020304}; x.b[0]; }) => 4\n({ union { int a; char b[4]; } x={0x01020304}; x.b[1]; }) => 3\n({ union { struct { char a,b,c,d; } e; int f; } x={{4,3,2,1}}; x.f; }) => 16909060\ng3 => 3\ng4 => 4\ng5 => 5\ng6 => 6\nOK\n"
status: 0
